CSS fix for horizontal scrollbar.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -6,6 +6,7 @@ body {
   font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #353535;
   background: linear-gradient(to bottom, #ffffff 0%,#dbdce2 76%,#c5c4d3 98%);
+  overflow-x: hidden;
 }
 
 div#container {
@@ -15,6 +16,7 @@ div#container {
   position: absolute;
   text-align: center;
   width: 100%;
+
 
   div#timerContainer {
     font-size: 2.5em;
